--- a/boxes.html
+++ b/boxes.html
@@ -3,6 +3,13 @@
     <head>
         <title>javascript</title>
         <script language="javascript">
+            var prompt= prompt('what is your name plz?');
+            if(prompt!=""){
+                document.write("you are just use prompt box Mr."+name);
+            }
+            else{
+                document.write("plz enter your name")
+            }
             
 
 
