onFocus add and prompt fix
onFocus add and prompt fix

--- a/boxes.html
+++ b/boxes.html
@@ -6,7 +6,7 @@
             function myfun(){
                 var page= confirm("do you want to clean your device?");
                 if(page == true){
-                    window.open("http/:www.quickheal.com");
+                    window.open("http//:www.quickheal.com");
                     return true 
                 }
                 else{
@@ -14,8 +14,8 @@
                     return false;
                 }
             }
-            var prompt= prompt('what is your name plz?');
-            if(prompt!=""){
+            var name= prompt('what is your name plz?');
+            if(name!=""){
                 document.write("you are just use prompt box Mr."+name);
             }
             else{
