--- a/Math Obj/mathobj02.html
+++ b/Math Obj/mathobj02.html
@@ -4,10 +4,11 @@
         <title>javascript</title>
         <script language="javascript">
          with (Math){
-            var x= 6
-            var y=5
+            var x= 100
+            var y=10
             var result=max(x,y)
-            document.write(result);
+            //document.write(result);
+            document.write(Math.random()*20);
         }
 
         </script>
